// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active outline 1`] = `
Array [
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
        },
        Object {
          "left": 8,
          "right": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scaleX": 1,
            },
            Object {
              "translateX": 80,
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "rgba(0, 0, 0, 1)",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": -4,
            "left": -4,
            "position": "absolute",
            "right": -4,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": -4,
          "left": -4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 4,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": 0.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": -4,
          "left": 0,
          "position": "absolute",
          "right": -4,
          "top": 0,
        }
      }
    />
  </View>,
]
`;

exports[`renders disabled outline 1`] = `
Array [
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
        },
        Object {
          "left": 8,
          "right": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scaleX": 1,
            },
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "bottom": -4,
            "left": -4,
            "position": "absolute",
            "right": -4,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 4,
          "borderWidth": 1,
          "bottom": -4,
          "left": -4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 4,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 4,
          "borderWidth": 1,
          "bottom": 0.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 4,
          "borderWidth": 1,
          "bottom": -4,
          "left": 0,
          "position": "absolute",
          "right": -4,
          "top": 0,
        }
      }
    />
  </View>,
]
`;

exports[`renders outline 1`] = `
Array [
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
        },
        Object {
          "left": 8,
          "right": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scaleX": 1,
            },
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "rgba(0, 0, 0, 1)",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0.5,
            "bottom": -4,
            "left": -4,
            "position": "absolute",
            "right": -4,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": -4,
          "left": -4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 4,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": 0.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "rgba(0, 0, 0, 1)",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "bottom": -4,
          "left": 0,
          "position": "absolute",
          "right": -4,
          "top": 0,
        }
      }
    />
  </View>,
]
`;

exports[`renders restricted outline 1`] = `
Array [
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
        },
        Object {
          "left": 8,
          "right": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scaleX": 1,
            },
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "red",
            "borderRadius": 4,
            "borderWidth": 2,
            "bottom": -4,
            "left": -4,
            "position": "absolute",
            "right": -4,
            "top": 0,
          }
        }
      />
    </View>
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "red",
          "borderRadius": 4,
          "borderWidth": 2,
          "bottom": -4,
          "left": -4,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 4,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "red",
          "borderRadius": 4,
          "borderWidth": 2,
          "bottom": 0.5,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
        }
      }
    />
  </View>,
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "height": 4,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        Object {
          "width": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderColor": "red",
          "borderRadius": 4,
          "borderWidth": 2,
          "bottom": -4,
          "left": 0,
          "position": "absolute",
          "right": -4,
          "top": 0,
        }
      }
    />
  </View>,
]
`;
